--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -3,7 +3,6 @@
     <!--THE CESIUM CONTAINER-->
     <div id="cesiumContainer" class="col-md-12"></div>
     <!--THE CESIUM CONTAINER-->
-
     <div id="controlPanel">
         <div class="btn-group" dropdown>
             <button class="btn btn-default btn-lg dropdown-toggle">
@@ -23,6 +22,20 @@
                         <span class="tab"></span>Restart
                     </a>
                 </li>
+				<ul class="dropdown-submenu">
+					<li>
+						<a role="button" (click)="plane1()">
+							<span class="glyphicon glyphicon-plane"></span>
+							Cessna
+						</a>
+					</li>
+					<li>
+						<a role="button" (click)="plane2()">
+							<span class="glyphicon glyphicon-plane"></span>
+							Piper
+						</a>
+					</li>
+				</ul>
             </ul>
         </div>
     </div>
