Added a div which we can connect to the live data with js and display it

--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -4,7 +4,13 @@
     <div id="cesiumContainer" class="col-md-12"></div>
     <!--THE CESIUM CONTAINER-->
     <div id="controlPanel">
-        <div class="btn-group" dropdown>
+		<div id="flightInfo" style="color:white">
+			Place current flight information here<br/>
+			Such as indicated airspeed<br/>
+			Latitude and Longitude<br/>
+			Or heading
+		</div>
+        <div id="options" class="btn-group" dropdown>
             <button class="btn btn-default btn-lg dropdown-toggle">
                 <span class="class glyphicon glyphicon-menu-down"></span>
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
