--- a/src/app/cesium-map/cesium-map.component.css
+++ b/src/app/cesium-map/cesium-map.component.css
@@ -4,3 +4,22 @@
     left: 5px;
     border-radius: 5px;
 }
+#options{
+	position: absolute;
+	top: 5px;
+	left: 5px;
+}
+#flightInfo{
+	position: relative;
+	top: 200px;
+	left: 5px;
+	border-radius: 5px;
+	padding: 5px 8px;
+	background: rgba(42, 42, 42, 0.7);
+}
+label {
+  cursor: pointer;
+}
+label:hover span {
+  text-decoration: underline;
+}
