Cleaned up comments

--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -4,7 +4,7 @@
     <div id="cesiumContainer" class="col-md-12"></div>
     <!--THE CESIUM CONTAINER-->
     <div id="controlPanel">
-		<!--Live HTML table-->
+		<!--Live HTML table WIP-->
 		<div id="flightInfo" style="color:Grey">
 			<ul class="list-group">
 				<li class="list-group-item">
@@ -31,7 +31,7 @@
 				</li>
 			</ul>
 		</div>
-		<!-- Options menu-->
+		<!-- Options menu WIP-->
         <div id="options" class="btn-group" dropdown>
             <button class="btn btn-default btn-lg dropdown-toggle">
                 <span class="class glyphicon glyphicon-menu-down"></span>
