Ability to change models

--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -52,15 +52,15 @@
                 </li>
 				<ul class="dropdown-submenu">
 					<li>
-						<a role="button" (click)="plane1()">
-							<span class="glyphicon glyphicon-plane"></span>
+						<a role="button">
+							<span id="plane1" class="glyphicon glyphicon-plane"></span>
 							Cessna
 						</a>
 					</li>
 					<li>
-						<a role="button" (click)="plane2()">
-							<span class="glyphicon glyphicon-plane"></span>
-							Piper
+						<a role="button">
+							<span id="plane2" class="glyphicon glyphicon-plane"></span>
+							Milk Truck
 						</a>
 					</li>
 				</ul>
