Changed flight display to IAS
To take up less room on left side of screen

--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -15,7 +15,7 @@
 			<ul class="list-group">
 				<li class="list-group-item">
 					<span id="airSpeed" class="pull-right"></span>
-						Indicated Air Speed:
+						IAS:
 				</li>
 			</ul>
 			<ul class="list-group">
