--- a/src/app/cesium-map/cesium-map.component.css
+++ b/src/app/cesium-map/cesium-map.component.css
@@ -17,6 +17,25 @@
 	padding: 5px 8px;
 	background: rgba(42, 42, 42, 0.7);
 }
+
+#controlPanel1 {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border-radius: 5px;
+}
+
+#legend{
+	white-space: nowrap;
+	overflow: auto;
+	position: absolute;
+	top: 40px;
+	right: 0px;
+	border-radius: 5px;
+	padding: 5px 8px;
+	background: rgba(42, 42, 42, 0.7);
+}
+
 label {
   cursor: pointer;
 }
