--- a/src/app/cesium-map/cesium-map.component.html
+++ b/src/app/cesium-map/cesium-map.component.html
@@ -1,3 +1,8 @@
+<style>
+	#exceedance1{
+		background-color: red;
+	}
+</style>
 <div class="row">
 
     <!--THE CESIUM CONTAINER-->
@@ -31,6 +36,11 @@
 				</li>
 			</ul>
 		</div>
+		
+		
+	
+		
+		
 		<!-- Options menu WIP-->
         <div id="options" class="btn-group" dropdown>
             <button class="btn btn-default btn-lg dropdown-toggle">
@@ -66,5 +76,31 @@
 				</ul>
             </ul>
         </div>
+    </div>
+</div>
+
+<div class="row1">
+	<div id="controlPanel1">
+		<!--Live HTML table WIP-->
+		<div id="legend" style="color:Grey;">
+			<ul class="list-group" style="color: red">
+				<li class="list-group-item">
+					<div id="exceedance1"></div>
+						Excessive IAS
+				</li>
+			</ul>
+			<ul class="list-group" style="color: blue">
+				<li class="list-group-item">
+					<div id="exceedance2"></div>
+						Excessive Altitude
+				</li>
+			</ul>
+			<ul class="list-group" style="color: green">
+				<li class="list-group-item">
+					<div id="exceedance3"></div>
+						Excessive Roll
+				</li>
+			</ul>
+		</div>
     </div>
 </div>
